[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge MCP server for tool-calling agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pytest",
  "httpx",
  "qdrant-client",
  "groq",
  "openai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
